--- a/public/css/layout.css
+++ b/public/css/layout.css
@@ -1,24 +1,16 @@
-body {
+.wrapper{
 	background: #f6f5f7;
 	display: flex;
 	justify-content: center;
 	align-items: center;
 	flex-direction: column;
 	font-family: 'Montserrat', sans-serif;
+	margin: auto;
 	height: 100vh;
-	margin: -20px 0 50px;
 }
 
-h1 {
-	font-weight: bold;
-	margin: 0;
-}
 
-h2 {
-	text-align: center;
-}
-
-p {
+.descriptive {
 	font-size: 14px;
 	font-weight: 100;
 	line-height: 20px;
@@ -26,21 +18,21 @@ p {
 	margin: 20px 0 30px;
 }
 
-span {
+.form-container span {
 	font-size: 12px;
 }
 
-a {
+.social-container .social {
 	color: #333;
 	font-size: 14px;
 	text-decoration: none;
 	margin: 15px 0;
 }
 
-button {
+.button-login {
 	border-radius: 20px;
-	border: 1px solid #FF4B2B;
-	background-color: #FF4B2B;
+	border: 1px solid #1BA9FF;
+	background-color: #1BA9FF;
 	color: #FFFFFF;
 	font-size: 12px;
 	font-weight: bold;
@@ -50,20 +42,20 @@ button {
 	transition: transform 80ms ease-in;
 }
 
-button:active {
+.button-login:active {
 	transform: scale(0.95);
 }
 
-button:focus {
+.button-login:focus {
 	outline: none;
 }
 
-button.ghost {
+.button-login.ghost {
 	background-color: transparent;
 	border-color: #FFFFFF;
 }
 
-form {
+.form-container {
 	background-color: #FFFFFF;
 	display: flex;
 	align-items: center;
@@ -74,7 +66,7 @@ form {
 	text-align: center;
 }
 
-input {
+.form-container .input-login {
 	background-color: #eee;
 	border: none;
 	padding: 12px 15px;
@@ -154,8 +146,8 @@ input {
 
 .overlay {
 	background: #FF416C;
-	background: -webkit-linear-gradient(to right, #FF4B2B, #FF416C);
-	background: linear-gradient(to right, #FF4B2B, #FF416C);
+	background: -webkit-linear-gradient(to right, #1BA9FF, #039af8);
+	background: linear-gradient(to right, #1BA9FF, #039af8);
 	background-repeat: no-repeat;
 	background-size: cover;
 	background-position: 0 0;
@@ -230,16 +222,67 @@ footer {
     text-align: center;
     z-index: 999;
 }
-
-footer p {
-    margin: 10px 0;
+.eye-wrap {
+	position:relative;
 }
+.eye{
+	width:1.25em;
+	height:0.75em;
+	position:absolute;
+	display:inline-block;
+	top:40%;
+	left:85%;
+	z-index: 2;
+	--background:#aaa;
+	--color:currentColor;
+  }
+  .eye div{
+	overflow:hidden;
+	height:50%;
+	position:relative;
+	margin-bottom:-1px;
+  }
+  .eye div:before{
+	content:'';
+	background:currentColor;
+	position:absolute;
+	left:0;
+	right:0;
+	height:300%;
+	border-radius:100%;
+  }
+  .eye div:last-child:before{
+	bottom:0;
+  }
+  .eye:before{
+	content:'';
+	position:absolute;
+	top:50%;
+	left:50%;
+	transform:translate(-50%, -50%);
+	width:0.35em;
+	height:0.35em;
+	background:var(--color);
+	border:0.1em solid var(--background);
+	border-radius:100%;
+	z-index:1;
+  }
+  .eye:after{
+	content:'';
+	position:absolute;
+	top:-0.15em;
+	left:calc(33.333% - 0.15em);
+	transform:rotate(45deg) scaleX(0);
+	transform-origin:left center;
+	width:90%;
+	height:0.1em;
+	background:var(--color);
+	border-top:0.1em solid var(--background);
+	z-index:2;
+	transition:transform 0.25s;
+  }
+  .eye.slash:after{
+	transform:rotate(45deg) scaleX(1);
+  }
 
-footer i {
-    color: red;
-}
 
-footer a {
-    color: #3c97bf;
-    text-decoration: none;
-}
