--- a/public/css/backend.css
+++ b/public/css/backend.css
@@ -18,3 +18,17 @@
     height: 100vh;
     bottom:0;
 }
+.icon-delete {
+    position: absolute;
+    top: -10px;
+    right: 5px;
+}
+.image-book {
+    padding: 0.25rem;
+    background-color: #ffffff;
+    border: 1px solid #dee2e6;
+    border-radius: 0.25rem;
+    box-shadow: 0 1px 2px rgb(0 0 0 / 8%);
+    width: 120px;
+    height: 160px;
+}
