--- a/public/css/frontend.css
+++ b/public/css/frontend.css
@@ -1156,12 +1156,16 @@ html {
 }
 
 .home-product-item__img {
-    padding-top:100%;
-    background-position: top center;
-    background-repeat: no-repeat;
-    background-size: contain;
     border-top-left-radius: 2px;
     border-top-right-radius: 2px;
+    width: 100%;
+    height: 186px;
+}
+.home-product-item__img .image-book{
+    border-top-left-radius: 2px;
+    border-top-right-radius: 2px;
+    width: 100%;
+    height: 186px;
 }
 .home-product-item__name {
     font-size: 1.4rem;
@@ -1175,8 +1179,6 @@ html {
     display: -webkit-box;
     -webkit-box-orient: vertical;
     -webkit-line-clamp: 2;
-    /* text-overflow:ellipsis;
-    white-space:nowrap; */
 }
 .home-product-item__price {
     display:flex;
