--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -15,3 +15,5 @@
 @import "~@fortawesome/fontawesome-free/scss/regular";
 @import "~@fortawesome/fontawesome-free/scss/solid";
 @import "~@fortawesome/fontawesome-free/scss/brands";
+//sweetalert2
+@import 'sweetalert2/src/sweetalert2.scss'
