--- a/public/css/backend.css
+++ b/public/css/backend.css
@@ -18,10 +18,14 @@
     height: 100vh;
     bottom:0;
 }
+.image-body {
+    position: relative;
+    width: 120px;
+}
 .icon-delete {
     position: absolute;
     top: -10px;
-    right: 5px;
+    right: 0px;
 }
 .image-book {
     padding: 0.25rem;
@@ -29,6 +33,6 @@
     border: 1px solid #dee2e6;
     border-radius: 0.25rem;
     box-shadow: 0 1px 2px rgb(0 0 0 / 8%);
-    width: 120px;
+    max-width: 120px;
     height: 160px;
 }
