--- a/public/css/frontend.css
+++ b/public/css/frontend.css
@@ -37,12 +37,7 @@ flex-wrap: wrap;
 margin-left: -5px;
 margin-right: -5px;
 }
-.close {
-display: none;
-}
-.show {
-display: block;
-}
+
 .grid__column-2{
 padding-right: 5px;
 padding-left: 5px;
@@ -176,7 +171,7 @@ position:absolute;
 left: 0;
 right: 0;
 top: 26px;
-border-radius: 2px;
+border-radius: 4px;
 background-color: var(--white-color);
 list-style: none;
 padding: 8px 16px;
@@ -194,44 +189,12 @@ padding:4px 0;
 color: var(--primary-color);
 }
 
-/* Pagination */
-.pagination {
-display: flex;
-justify-content: center;
-align-items:center;
-list-style: none;
-}
-.pagination-item {
-padding: 0 12px;
-
-}
-.pagination-item--active .pagination-item__link{
-color: var(--white-color);
-background-color: var(--primary-color);
-}
-.pagination-item--active .pagination-item__link:hover {
-background-color:#1BA9FF;
-}
-.pagination-item__link {
---height:30px;
-display: block;
-text-decoration: none;
-font-size: 2rem;
-font-weight: 300;
-color:#939393;
-min-width: 40px;
-height: var(--height);
-text-align: center;
-line-height: var(--height);
-border-radius: 2px;
-}
-
 .header {
 height:var(--header-hight);
 background-image: linear-gradient(0,#1BA9FF,#1FA2C5);
 position:fixed;
 top: 0;
-left: 0; 
+left: 0;
 right: 0;
 z-index: 9999;
 }
@@ -959,9 +922,7 @@ display:none;
 .header__search-option-item--active i{
 display: inline-block;
 }
-.header__search-input:focus ~ .header__search-input-history {
-display: block;
-}
+
 
 /* Search history */
 .header__search-input-history {
@@ -1091,10 +1052,11 @@ margin-right: 16px;
 display: flex;
 align-items: center;
 }
-.home-filter__btn{
+.btn.home-filter__btn{
 margin-right:12px;
 min-width: 90px;
 box-shadow: 0 1px 3.125rem 0 rgba(0, 0, 0, 0.2);
+font-size: 14px;
 }
 
 .home-filter__page{
@@ -1173,7 +1135,7 @@ width: 100%;
 height: 186px;
 }
 .home-product-item__name {
-font-size: 1.4rem;
+font-size: 1.5rem;
 font-weight: 400;
 color:var(--text-color);
 line-height: 1.8rem;
@@ -1219,16 +1181,11 @@ i.home-product-item__like-icon-fill {
 display: none;
 color:#1BA9FF;
 }
-.home-product-item__like--liked .home-product-item__like-icon-fill{
-display: inline-block;
-}
-.home-product-item__like--liked .home-product-item__like-icon-empty {
-display: none;
-}
+
 .home-product-item__rating {
 font-size: 0.8rem;
 color:#D5D5D5;
-margin:-1px 0 0 auto;
+margin:-1px 0 0 0;
 
 }
 .home-product-item__star--gold{
@@ -1237,7 +1194,6 @@ color: var(--star-gold-color);
 .home-product-item__sold {
 font-size: 1.2rem;
 color: var(--text-color);
-margin-left: 6px;
 }
 .home-product-item__origin {
 display:flex;
@@ -1248,8 +1204,17 @@ font-size: 1.2rem;
 font-weight: 300;
 }
 .home-product-item__brand {
-
-
+display: block;
+line-height: 14px;
+word-break: break-word;
+white-space: normal;
+overflow: hidden;
+text-overflow: ellipsis;
+display: -webkit-box;
+-webkit-line-clamp: 1;
+-webkit-box-orient: vertical;
+height: 14px;
+margin-bottom: 8px;
 }
 .home-product-item__origin-name {
 
@@ -1340,7 +1305,7 @@ list-style: none;
 }
 .footer-item__link{
 text-decoration: none;
-font-size: 1.2rem;
+font-size: 1.3rem;
 color: #737373;
 padding: 2px 0;
 display: flex;
@@ -1390,4 +1355,62 @@ color:#737373;
 }
 .product-wrap {
 width: 203px;
+}
+.alert {
+font-size:14px;
+}
+.pagination .page-item {
+margin-right: 10px;
+border: none;
+border-radius: 5px;
+width: 40px;
+height: 40px;
+line-height: 40px;
+color: black;
+cursor: pointer;
+user-select: none;
+}
+.pagination .page-link {
+width: 40px;
+height: 40px;
+line-height: 40px;
+font-size: 14px;
+font-weight:600;
+display: flex;
+align-items:center;
+justify-content: center;
+}
+.pagination .page-item.disabled {
+display: none;
+}
+.breadcrumb-item a {
+text-decoration: none;
+}
+
+.breadcrumb .breadcrumb-item{
+font-weight: 500;
+font-size:14px;
+text-transform: uppercase;
+}
+
+.no-result-book{
+font-size: 14px;
+font-weight:600;
+height: 100px;
+margin-bottom: 200px;
+}
+.product-wrap:hover {
+box-shadow: 0px 0px 4px 2px rgb(0 0 0 / 10%);
+-webkit-box-shadow: 0px 0px 4px 2px rgb(0 0 0 / 10%);
+}
+.select-search { 
+    min-width: 200px;
+    height: 34px;
+    border-radius: 2px;
+    padding: 0 12px;
+    background-color: var(--white-color);
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    font-size: 14px;
 }
