--- a/public/css/frontend.css
+++ b/public/css/frontend.css
@@ -20,6 +20,22 @@ line-height:1.6rem;
 font-family: 'Roboto', sans-serif;
 box-sizing: border-box;
 }
+.overlay{
+    display: none;
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    z-index: 999;
+    background: rgba(255,255,255,0.8) url('/images/app/load.gif') center no-repeat;
+}
+body.loading{
+    overflow: hidden;   
+}
+body.loading .overlay{
+    display: block;
+}
 /* Responsive */
 .grid {
 width: 1200px;
